fix error when move template

--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -45,6 +45,7 @@
                                 <span id="pwdRepeat_error"></span>
                             </li>
                         </ul>
+                        <div class="backError"></div>
                         <div class="btn"><span id="pwd_save">保存</span></div>
                         </form>
                     </div>
