--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
@@ -26,7 +26,7 @@
                     <img src="{{ asset('img/common/default_tx.png') }}" alt="头像">
                     {% endif %}
                     </div>
-                    <form action="{{ path('_profile_upload') }}" method="post" {{ form_enctype(form) }} id="form1">
+                    <form action="{{ path('_profile_upload') }}" method="post" {{ form_enctype(form) }} id="uploadForm" name="uploadForm" >
                     {{ form_widget(form.attachment) }}
                     <p class="errorInfo"></p>
                     </form>
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
                 <div class="picCut">
-                    <form action="{{ path('_user_resUp') }}" method="post" name="imageForm">
+                    <form action="{{ path('_user_resUp') }}" method="post" name="imageForm" id="imageForm">
                     <div class="imageInfo left"></div>
                     <div class="resDiv left">
                         <div class="resImg"><p class="resizeimage"></p></div>
@@ -58,25 +58,25 @@
                 {% if completed is defined and completed == 1%}
                 <div class="successMess">个人资料修改成功!</div>
                 {% endif %}
-                <form action="{{ path('_profile_edit_commit') }}" method="post" id="form1" name="profileForm">
+                <form action="{{ path('_profile_edit_commit') }}" method="post" id="profileForm" name="profileForm" >
                 <ul class="con">
                     <li><label for="nick">昵称：</label>{{ form_widget(form.nick) }}{{ form_errors(form.nick) }}</li>
                     <li><label for="tel">手机号码：</label>{{ form_widget(form.tel) }}{{ form_errors(form.tel) }}</li>
                     <li><label for="sex">性别：</label>{{ form_widget(form.sex) }}{{ form_errors(form.sex) }}</li>
                     <li><label for="birthday">生日：</label>{{ form_widget(form.birthday) }}{{ form_errors(form.birthday) }}{% if birthday_error is defined %}{{birthday_error}}{% endif %}</li>
                     <li><label for="address">居住地：</label>
-                        <select id="province" name="province">
+                        <select id="province" name="profile[province]">
                         <option value="0" selected="selected">省、市</option>
                         {% for item in province %}
                         <option value="{{ item.id }}"  {% if user.province == item.id %} selected = "selected"  {% endif %}>{{ item.provinceName }}</option>
                         {% endfor %}
                         </select>
-                        <select id="city" name="city">
+                        <select id="city" name="profile[city]">
                         <option value="0" selected="selected">地区</option>
                         </select>
                     </li>
                     <li><label for="income">个人月收入：</label>
-                        <select id="income" name="income">
+                        <select id="income" name="profile[income]">
                         <option value="0" selected="selected">请选择收入</option>
                         {% for item in income %}
                         <option value="{{ item.id }}" {% if user.income == item.id %} selected = "selected" {% endif %}>{{ item.income }}</option>
@@ -84,19 +84,19 @@
                         </select>
                     </li>
                     <li><label for="job">职业：</label>
-                        <select id="profession" name="profession">
+                        <select id="profession" name="profile[profession]">
                         <option value="0" selected="selected">请选择职业</option>
                         {% for key,value in profession %}
                         <option value="{{key}}" {% if user.profession == key %} selected = "selected" {% endif %}>{{ value }}</option>
                         {% endfor %}
                         </select>
-                        <select id="industry_code" name="industry_code">
+                        <select id="industry_code" name="profile[industry_code]">
                         <option value="0" selected="selected">请选择行业</option>
                         {% for key,value in industry_code %}
                         <option value="{{key}}" {% if user.industryCode == key %} selected = "selected" {% endif %}>{{ value }}</option>
                         {% endfor %}
                         </select>
-                        <select id="work_section_code" name="work_section_code">
+                        <select id="work_section_code" name="profile[work_section_code]">
                         <option value="0" selected="selected">请选择部门</option>
                         {% for key,value in work_section_code %}
                         <option value="{{key}}" {% if user.workSectionCode == key %} selected = "selected" {% endif %}>{{ value }}</option>
@@ -104,14 +104,14 @@
                         </select>
                     </li>
                     <li><label for="education">教育程度：</label>
-                        <select id="education" name="education"><option value="0" selected="selected">请选择</option>
+                        <select id="education" name="profile[education]"><option value="0" selected="selected">请选择</option>
                         {% for key,value in education %}
                         <option value="{{key}}" {% if user.education == key %} selected = "selected" {% endif %}>{{ value }}</option>
                         {% endfor %}
                         </select>
                     </li>
                     <li><label for="hobby">兴趣爱好：</label>
-                        {% for item in hobbyList %}<input type="checkbox"  name="hobby[]" value="{{ item.id }}" {% if item.id  in userProHobby %} checked = "checked" {% endif %}>{{ item.hobbyName }}{% endfor %}
+                        {% for item in hobbyList %}<input type="checkbox"  name="profile[hobby][]" value="{{ item.id }}" {% if item.id  in userProHobby %} checked = "checked" {% endif %}>{{ item.hobbyName }}{% endfor %}
                     </li>
                     <li><label for="signature">签名：</label>{{ form_widget(form.personalDes) }}{{ form_errors(form.personalDes) }}</li>
                     <li><label for="music">喜欢的音乐：</label>{{ form_widget(form.favMusic) }}{{ form_errors(form.favMusic) }}</li>
@@ -119,7 +119,7 @@
                 </ul>
                 <div class="btn"><span id="profile_save">保存</span></div>
                 {{ form_widget(form.token) }}
-                <input type="hidden" id="user_city" name="user_city" value="{{user.city}}">
+                <input type="hidden" id="user_city" name="profile[user_city]" value="{{user.city}}">
                 </form>
             </div>
         </div>
