--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
@@ -63,7 +63,7 @@
                     <li><label for="nick">昵称：</label>{{ form_widget(form.nick) }}{{ form_errors(form.nick) }}</li>
                     <li><label for="tel">手机号码：</label>{{ form_widget(form.tel) }}{{ form_errors(form.tel) }}</li>
                     <li><label for="sex">性别：</label>{{ form_widget(form.sex) }}{{ form_errors(form.sex) }}</li>
-                    <li><label for="birthday">生日：</label>{{ form_widget(form.birthday) }}{{ form_errors(form.birthday) }}{% if birthday_error is defined %}{{birthday_error}}{% endif %}</li>
+                    <li><label for="birthday">生日：</label>{{ form_widget(form.birthday, {'attr': {'class':'laydate-icon' }}) }}{{ form_errors(form.birthday) }}{% if birthday_error is defined %}{{birthday_error}}{% endif %}</li>
                     <li><label for="address">居住地：</label>
                         <select id="province" name="profile[province]">
                         <option value="0" selected="selected">省、市</option>
