--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/profile.html.twig
@@ -20,12 +20,11 @@
                 <div class="con clearfix">
                     <div class="face left">
                     <div class="face-wapper">
-                    <!-- {% if user.iconPath %}
-                    <img src='{{ asset(user.iconPath) }}' height="110" />
-                    {% else %} -->
-                    
-                    <!-- {% endif %} -->
-                    <img src="{{ asset('img/temp/qsurveyImg.jpg') }}" alt="头像" height="58">
+                    {% if user.iconPath %}
+                    <img src='{{ asset(user.iconPath) }}' height="58" />
+                    {% else %}
+                    <img src="{{ asset('img/common/default_tx.jpg') }}" alt="头像" height="58">
+                    {% endif %}
                     </div>
                     <form action="{{ path('_profile_upload') }}" method="post" {{ form_enctype(form) }} id="uploadForm" name="uploadForm" >
                     <label class="set" for="profile_attachment">设置头像</label>{{ form_widget(form.attachment) }}
