--- a/web/css/404.css
+++ b/web/css/404.css
@@ -213,6 +213,10 @@ body {
     .header-top-con .personal-con span strong {
       font-size: 16px;
       color: #ff6700; }
+    .header-top-con .personal-con span img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%; }
 
 .header-nav {
   background: #fff;
@@ -393,5 +397,3 @@ body {
 
 .footer {
   margin-top: 0; }
-
-/*# sourceMappingURL=404.css.map */
