--- a/web/css/index.css
+++ b/web/css/index.css
@@ -213,6 +213,10 @@ body {
     .header-top-con .personal-con span strong {
       font-size: 16px;
       color: #ff6700; }
+    .header-top-con .personal-con span img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%; }
 
 .header-nav {
   background: #fff;
