--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -214,6 +214,10 @@ body {
     .header-top-con .personal-con span strong {
       font-size: 16px;
       color: #ff6700; }
+    .header-top-con .personal-con span img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%; }
 
 .header-nav {
   background: #fff;
@@ -424,20 +428,20 @@ h1 {
       z-index: 1; }
       .main-personal-profile .profile-base .face .set {
         margin-top: 10px;
-        padding-left: 6px;
+        padding-left: 30px;
         color: #0078b6;
         cursor: pointer; }
       .main-personal-profile .profile-base .face #profile_attachment {
         position: absolute;
         z-index: 1000;
         width: 65px;
-        top: 64px;
-        left: 50px;
+        top: 118px;
+        left: 72px;
         opacity: 0;
         filter: alpha(opacity=0);
         cursor: pointer; }
     .main-personal-profile .profile-base ul {
-      margin-top: 10px; }
+      margin-top: 42px; }
     .main-personal-profile .profile-base li.prompt {
       margin-top: 5px; }
       .main-personal-profile .profile-base li.prompt span {
@@ -478,7 +482,7 @@ h1 {
     .main-personal-profile .profile-base .imageInfo {
       margin-right: 20px; }
       .main-personal-profile .profile-base .imageInfo img {
-        width: 582px;
+        width: 512px;
         height: auto; }
     .main-personal-profile .profile-base .resImg {
       width: 150px;
@@ -683,5 +687,3 @@ h1 {
         background-position: 0 -18px; }
       .footer .footer-con-right .goTop:hover span {
         background-position: -19px -18px; }
-
-/*# sourceMappingURL=profile.css.map */
