--- a/web/css/suggest.css
+++ b/web/css/suggest.css
@@ -213,6 +213,10 @@ body {
     .header-top-con .personal-con span strong {
       font-size: 16px;
       color: #ff6700; }
+    .header-top-con .personal-con span img {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%; }
 
 .header-nav {
   background: #fff;
@@ -285,7 +289,6 @@ body {
     display: inline-block;
     *display: inline;
     *zoom: 1; }
-
 .form input[type='text'], .form input[type='password'] {
   padding: 0 5px;
   height: 34px;
@@ -339,7 +342,6 @@ body {
     .form span a.more {
       font-size: 12px;
       display: inline; }
-
 .form .btn span {
   width: 74px;
   text-align: center;
