--- a/web/sass/layout/header.scss
+++ b/web/sass/layout/header.scss
@@ -163,6 +163,11 @@ $top-bg-color: #36363c;
 				font-size: 16px;
 				color: $main-color;
 			}
+			img{
+				width: 60px;
+				height: 60px;
+				border-radius: 50%;
+			}
 		}
 	}
 }
