--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/addExperienceAdvertisement.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/addExperienceAdvertisement.html.twig
@@ -21,7 +21,7 @@
 {{form_errors(form)}}
 </table>
 {% if code %}
-<font color='red'>{{ code }}</font>
+<div class="tips"><font color='red'>{{ code }}</font></div>
 {%endif%}
 </form>
 </BODY></HTML>
