--- a/src/Jili/BackendBundle/Resources/views/RebateActivity/create.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/RebateActivity/create.html.twig
@@ -62,7 +62,7 @@
 
 </form>
 
-<div>
+<div class="tips">
 <a href="{{ path('rebate_activity_admin_retrieve') }}">Return</a> | 
 </div>
 {% endblock %}
