--- a/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/internal_menu.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameEggsBreaker/internal_menu.html.twig
@@ -1,9 +1,6 @@
-
-<div>
+<div class="autoCenter">
 <h4>Menu</h4>
 <a href="{{ path('jili_backend_decemberactivity_consolationpointspool') }}" >建安慰策略</a><br />
 <a class=menuChild href="{{ path('jili_backend_decemberactivity_pointspool') }}" >建积分策略</a><br />
 <a class=menuChild href="{{ path('jili_backend_decemberactivity_listall') }}" >审核taobao订单</a> 
 </div>
-
-
