--- a/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/GameSeeker/PointsStrategy/build.html.twig
@@ -3,10 +3,12 @@
 {% block body %}
 {{ parent() }}
 
+<div class="autoCenter">
 <form action="{{ path('jili_backend_gameseeker_buildpointstrategy') }}" method="POST">
-{{ form_label(form.rules, '规则列表' ) }}
+{{ form_label(form.rules, '规则列表' ) }}<br>
 {{ form_widget(form.rules) }}
-{{ form_rest(form) }}
+{{ form_rest(form) }}<br>
 <input type="submit" value="Create" class="btn btn-default pull-right" />
 </form>
+</div>
 {% endblock %}
