--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -25,7 +25,7 @@
 					<ul>
 						<li><label for="email">邮箱</label><input id="email" name="email" type="text"><span id="email_succeed"></span><span id="email_error"></span></li>
 						<li><label for="pwd">密码</label><input id="pwd" name="pwd" type="password"><span id="pwd_succeed"></span><span id="pwd_error"></span></li>
-						<li><label for="authcode">验证码</label><img src="{{ asset('img/home/identify.jpg') }}" alt="验证码"><span class="authcodeInput"><input id="authcode" type="text"><div class="change">换一张</div></span><span id="authcode_succeed"></span><span id="authcode_error"></span></li>
+						<li class="remember"><input id="remember_me" name="remember_me" type="checkbox" value="1" checked>记住我</li>
 					</ul>
 					{% if app.session.has('goToUrl') and app.session.get('goToUrl')|length > 0  %}
 					<input name="referer" type="hidden" value="{{ app.session.get('goToUrl') }}">
@@ -33,7 +33,7 @@
 					{% if code %}
             		<input type="hidden" id="error_code" class="error" value="{{ code }}">
        				{% endif %}
-					<div class="login-btn" id="submit_button"><!-- <a href="home.html"> -->登录<!-- </a> --></div>
+					<div class="login-btn" id="submit_button">登录</div>
 					</form>
 					<p><a href="{{ path('_user_resetPwd') }}" class="spec right">忘记密码？</a>还没账号，<a href="{{ path('_user_reg') }}">马上注册</a></p>
 					<div class="login-btn-others">
