--- a/web/sass/component/login.scss
+++ b/web/sass/component/login.scss
@@ -18,7 +18,7 @@
 	border-radius: 5px;
 	overflow: hidden;
 	.login-con{
-		padding: 30px 38px;
+		padding: 35px 38px;
 		p{
 			font-size: 12px;
 		}
@@ -32,9 +32,14 @@
 		padding: 0 38px;
 	}
 	li{
-		margin-bottom: 15px;
+		margin-bottom: 20px;
 		position: relative;
 		z-index: 1;
+		&.remember{
+			font-size: 14px;
+			height: 24px;
+			line-height: 24px;
+		}
 		img{
 			vertical-align: middle;
 		}
@@ -95,7 +100,7 @@
 			@include dib();
 			vertical-align: middle;
 		}
-		input{
+		input[type="text"], input[type="password"]{
 			width: 252px;
 			height: 32px;
 			line-height: 30px;
@@ -115,6 +120,9 @@
 				width: 90px;
 				margin-left: 10px;
 			}
+			vertical-align: middle;
+		}
+		input[type="checkbox"]{
 			vertical-align: middle;
 		}
 	}
