add error pic and update pc's moudles

--- a/src/Wenwen/FrontendBundle/Resources/views/Gadget/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Gadget/index.html.twig
@@ -26,9 +26,9 @@
 			<div class="con deskCon clearfix">
 				<div class="txtL pcBtn left">
 					<div id="divInstaller">
-						<a href="http://www.adobe.com/go/getflashplayer" target="_blank"><img src="http://www.91wenwen.net/img/gadget/SeamlessInstallerFPError.png" alt="Get Adobe Flash player" border="0" /></a>
+						<a href="http://www.adobe.com/go/getflashplayer" target="_blank"><img src="{{ asset('img/gadget/SeamlessInstallerFPError.png') }}" alt="Get Adobe Flash player" border="0" /></a>
 					</div>
-					<p>下载失败？您可以手动下载<br>第一步&nbsp;<a target="_blank" href="http://get.adobe.com/cn/air/">下载adobe air插件</a><br>第二步&nbsp;<a href="http://www.91wenwen.net/dl/gadget/91wenwenDesktopWidget_1_0_9.air">下载91问问桌面工具</a></p>
+					<p>下载失败？您可以手动下载<br>第一步&nbsp;<a target="_blank" href="http://get.adobe.com/cn/air/">下载adobe air插件</a><br>第二步&nbsp;<a href="http://wang1-jili.com/dl/gadget/91wenwenDesktopWidget_1_0_9.air">下载91问问桌面工具</a></p>
 				</div>
 				<div class="txtR right">
 					<p>推荐的安装环境:<br>
