--- a/web/sass/gadget.scss
+++ b/web/sass/gadget.scss
@@ -223,6 +223,13 @@ body{
 			}
 		}
 	}
+	#divInstaller{
+		a{
+			margin-left: 130px;
+			margin-bottom: 10px;
+			display: inline-block;
+		}
+	}
 }
 .footer{
 	margin-top: 0!important;
