--- a/src/Wenwen/FrontendBundle/Resources/views/Gadget/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Gadget/index.html.twig
@@ -28,8 +28,8 @@
 					<div id="divInstaller">
 						<a href="http://www.adobe.com/go/getflashplayer" target="_blank"><img src="{{ asset('img/gadget/SeamlessInstallerFPError.png') }}" alt="Get Adobe Flash player" border="0" /></a>
 					</div>
-					<p>下载失败？您可以手动下载<br>第一步&nbsp;<a target="_blank" href="http://get.adobe.com/cn/air/">下载adobe air插件</a><br>第二步&nbsp;<a href="http://wang1-jili.com/dl/gadget/91wenwenDesktopWidget_1_0_9.air">下载91问问桌面工具</a></p>
 				</div>
+				<p class="txtM left">下载失败？您可以手动下载<br>第一步&nbsp;<a target="_blank" href="http://get.adobe.com/cn/air/">下载adobe air插件</a><br>第二步&nbsp;<a href="http://wang1-jili.com/dl/gadget/91wenwenDesktopWidget_1_0_9.air">下载91问问桌面工具</a></p>
 				<div class="txtR right">
 					<p>推荐的安装环境:<br>
 					Windows OS Windows XP SP2以上的版本<br>
