--- a/src/Wenwen/FrontendBundle/Resources/views/User/qqFirstLogin.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/qqFirstLogin.html.twig
@@ -15,15 +15,17 @@
     	<p class="welcome">尊敬的QQ会员，欢迎来到91问问网站！</p>
     	<div class="basicInfo">
     		<h4>您的基本信息</h4>
-    		<div class="con">您的昵称：老师看见耽搁了<br>性别：女</div>
+    		<div class="con">您的昵称：{{ nickname }}<br>性别：{{ sex }}</div>
     	</div>
     	<div class="otherRegForm tabCon">
     		<div class="tabs tabNav"><span class="active">没有91问问账号</span><span>已有91问问账号</span></div>
     		<div class="con">
     			<form action="{{ path('qq_registe') }}" method="post" name="form1" id="form1" >
+    			<input type="hidden" name="qqnickname" value="{{ nickname }}"/>
+                <input type="hidden" name="sex" value="{{ sex }}"/>
     			<ul class="addAccount">
     				<li>为保障您的账户安全，请设置QQ邮箱和91问问网站密码。</li>
-	                <li><label for="qqEmail">邮箱地址</label><br><input name="qqEmail" type="text" value=""/>@qq.com</li>
+	                <li><label for="qqEmail">邮箱地址</label><br>{{ form_widget(form.email_id, { 'attr': {'class': 'qqEmail'} }) }}@qq.com</li>
 	                <li><label for="setPwd">设置密码</label><br><input name="pwd" type="password" value=""/></li>
 	                <li>
 	                    <strong class="errorMsg" id="regist_emailError">
@@ -34,13 +36,17 @@
 	                </li>
 	                <li><span class="submitBtn" id='reg' >立即注册</span></li>
 	            </ul>
+	            {{ form_rest(form) }}
+               	<button style="display:none">register</button>
     			</form>
     		</div>
     		<div class="con">
     			<form action="{{ path('qq_bind') }}" method="post" name="form2" id="form2" >
+    			<input type="hidden" name="qqnickname" value="{{ nickname }}"/>
+                <input type="hidden" name="sex" value="{{ sex }}"/>
                 <ul class="bindAccount">
                     <li>将已有的91问问账号与QQ账号绑定。</li>
-                    <li><label for="kxUser">91问问账号</label><br><input name="jili_email" type="text" value=""/></li>
+                    <li><label for="kxUser">91问问账号</label><br><input name="jili_email" type="text" value="{{ email }}"/></li>
                     <li><label for="kxPwd">登录密码</label><br><input id="pwd" name="jili_pwd" type="password" value=""/></li>
                     <li><strong class="errorMsg" id="bind_emailError">
                             {% if bindcode is  defined %}
